Remove unrelated options

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -6,10 +6,7 @@
   "plugins": {
     "SplashScreen": {
       "backgroundColor": "#028AC2",
-      "launchAutoHide": false,
-      "splashFullScreen": false,
-      "splashImmersive": false,
-      "useDialog": true
+      "launchAutoHide": false
     }
   }
 }
